[package]
name = "libaccount"
version = "0.1.0"
edition = "2021"
authors = ["JieningYu <jiening.yu@outlook.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.193", features = ["derive"] }
serde_repr = "0.1.17"
thiserror = "1.0"
time = { version = "0.3", features = ["serde"] }
sha256 = "1.4"
rand = { version = "0.8", features = ["min_const_gen"] }
